--- a/Backend/templates/audio_video.html
+++ b/Backend/templates/audio_video.html
@@ -400,8 +400,8 @@
             }
             if(ques_index >= questions_num-1){
                 //hide next button and show submit button
-                document.querySelectorAll('#next-ques')[0].style.display = 'none';
-                document.querySelectorAll('#next-ques')[0].disable = true;
+                document.querySelectorAll('#next-question')[0].style.display = 'none';
+                document.querySelectorAll('#next-question')[0].disable = true;
                 document.querySelectorAll('#interview-submit')[0].style.display = 'block';
             }
 
